--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 
 
-@media (max-width: 599.92px) {.bg{
+@media (max-width: 599.92px) {
+    .bg{
     width: 100%;
     height: 40vh;
     background: linear-gradient(180deg, #C12038 0%, rgba(194, 99, 113, 0.59375) 39.06%, rgba(0, 0, 0, 0) 100%), url("restaurant.svg") center/cover;
@@ -67,15 +68,60 @@ margin-top: 20px;
 }
 
 .secbg{
-    width: 100%;
-    height: 36vh;
+    width: 113%;
+    height: 86vh;
     background-color: #191919;
 }
 
 .restorants_2{
+    
     padding-top: 25px;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
+}
+.subscribefornews{
+    color: white;
+}
+
+
+.contact_p{
+    color: white;
+}
+
+.contact{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    color: white;
+}
+
+.google_play{
+    width: 60px;
+}
+.app_store{
+    width: 60px;
+}
+.download_place{
+    display: flex;
+    justify-content: center;
+}
+.download_place_main{
+    display: flex;
+}
+.logos{
+    display: flex;
+
+}
+
+.social_logos{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.logo{
+    width: 16px;
+    height: 16px;
 }
