--- a/style.css
+++ b/style.css
@@ -1,127 +1,190 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-
+.bg {
+  width: 100%;
+  height: 50vh;
+  background: linear-gradient(
+      180deg,
+      #c12038 0%,
+      rgba(194, 99, 113, 0.59375) 39.06%,
+      rgba(0, 0, 0, 0) 100%
+    ),
+    url("restaurant.svg") center/cover;
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  color: azure;
+}
+.main {
+  margin-left: 20px;
+  margin-top: 40px;
+}
+.main_h1 {
+  width: 26%;
+}
+.aboutus {
+  width: 100%;
+  background-color: #f9f8f8;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 20px;
+}
+.restorants {
+  margin-left: 250px;
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.news {
+    margin-left: 28px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 
 @media (max-width: 599.92px) {
-    .bg{
-    width: 100%;
+  .bg {
+    width: 113%;
     height: 40vh;
-    background: linear-gradient(180deg, #C12038 0%, rgba(194, 99, 113, 0.59375) 39.06%, rgba(0, 0, 0, 0) 100%), url("restaurant.svg") center/cover;
-}
-.nav{
+    background: linear-gradient(
+        180deg,
+        #c12038 0%,
+        rgba(194, 99, 113, 0.59375) 39.06%,
+        rgba(0, 0, 0, 0) 100%
+      ),
+      url("restaurant.svg") center/cover;
+  }
+  .nav {
     display: flex;
     justify-content: space-between;
     color: azure;
-}
+  }
 
-.main{
-margin-left: 20px;
-margin-top: 20px;
-}}
+  .main {
+    margin-left: 20px;
+    margin-top: 20px;
+  }
 
-.restorants{
+  .main_h1 {
+    width: 75%;
+  }
+  .aboutus {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 20px;
+  }
+  .restorants {
     margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
-}
+  }
 
-.news{
+  .news {
+    margin-left: 28px;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
-}
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
 
-.coctailes{
-    grid-column:  1/3;
+  .coctailes {
+    grid-column: 1/3;
     grid-row: 1/3;
-}
-.coctailes_main{
+    margin-left: -12px;
+  }
+  .coctailes_main {
     display: flex;
     flex-direction: column;
-}
-.coctailes_main_main{
+  }
+  .coctailes_main_main {
     display: flex;
     flex-direction: row;
-}
-.dinocatering{
+  }
+  .dinocatering {
     margin-top: 28px;
     grid-column: 2/3;
     grid-row: 1/2;
-}
-.dinebistrosoon{
+    margin-left: 23px;
+  }
+  .dinebistrosoon {
     grid-column: 2/3;
     grid-row: 2/3;
-   width: 200px;
-   height: 110px;
-}
+    width: 200px;
+    height: 110px;
+    margin-left: 10px;
+  }
 
-.seeallnews{
+  .seeallnews {
     display: flex;
     justify-content: center;
+  }
 
-}
-
-.secbg{
+  .secbg {
     width: 113%;
-    height: 86vh;
+    height: 55vh;
     background-color: #191919;
-}
+  }
 
-.restorants_2{
-    
+  .restorants_2 {
     padding-top: 25px;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
-}
-.subscribefornews{
+  }
+  .subscribefornews {
     color: white;
-}
+  }
 
-
-.contact_p{
+  .contact_p {
     color: white;
-}
+  }
 
-.contact{
+  .contact {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     color: white;
-}
+  }
 
-.google_play{
+  .google_play {
     width: 60px;
-}
-.app_store{
+  }
+  .app_store {
     width: 60px;
-}
-.download_place{
+  }
+  .download_place {
     display: flex;
     justify-content: center;
-}
-.download_place_main{
+  }
+  .download_place_main {
     display: flex;
-}
-.logos{
+  }
+  .logos {
     display: flex;
+  }
 
-}
-
-.social_logos{
+  .social_logos {
     display: flex;
     justify-content: center;
     gap: 20px;
-}
+  }
 
-.logo{
+  .logo {
     width: 16px;
     height: 16px;
+  }
 }
