--- a/style.css
+++ b/style.css
@@ -53,6 +53,80 @@
     align-items: center;
   }
 
+  .dinebistrosoon2{
+    width: 300px;
+    height: 300px;
+    display: flex;
+  }
+
+  .seeallnews {
+    display: flex;
+    justify-content: center;
+  }
+  .restorants_2 {
+    margin-left: 250px;
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    gap: 20px
+  }
+  .secbg {
+    width: 100%;
+    height: 35vh;
+    background-color: #191919;
+  }
+  .subscribefornews {
+    color: white;
+    display: flex;
+    justify-content: center;
+  }
+
+  .contact_p {
+    color: white;
+    text-align: center;
+  }
+
+  .contact {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .download_place_main_main{
+    color: white;
+  }
+  .google_play {
+    width: 60px;
+  }
+  .app_store {
+    width: 60px;
+  }
+  .logos {
+    display: flex;
+    flex-direction: row;
+
+  }
+  .download_place{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .social_logos {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .logo {
+    width: 16px;
+    height: 16px;
+  }
 @media (max-width: 599.92px) {
   .bg {
     width: 113%;
@@ -125,6 +199,11 @@
     width: 200px;
     height: 110px;
     margin-left: 10px;
+  }
+  .dinebistrosoon2{
+    width: 200px;
+    height: 110px;
+    display: flex;
   }
 
   .seeallnews {
